--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -25,7 +25,7 @@ services:
       - applicationDBMS
 
   web:
-    build: './docker/django'
+    build: './'
     command: python manage.py runserver 0.0.0.0:8001
     ports:
       - "8001:8001"
