--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,14 +26,9 @@ services:
 
   web:
     build: './'
-    command: [
-      "sh",
-      "-c",
-      "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 manage.py runserver 0.0.0.0:8001 --nothreading --noreload"
-    ]
+    command: python manage.py runserver 0.0.0.0:8001
     ports:
       - "8001:8001"
-      - "5678:5678"
     environment:
       MYSQL_NAME: 'django_backend'
       MYSQL_USER: 'django'
