--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -26,9 +26,14 @@ services:
 
   web:
     build: './'
-    command: python manage.py runserver 0.0.0.0:8001
+    command: [
+      "sh",
+      "-c",
+      "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 manage.py runserver 0.0.0.0:8001 --nothreading --noreload"
+    ]
     ports:
       - "8001:8001"
+      - "5678:5678"
     environment:
       MYSQL_NAME: 'django_backend'
       MYSQL_USER: 'django'
