--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,6 +30,31 @@
                 ],
                 "file": "manage.py"
             }
+        },
+        {
+            "label": "Compose Up",
+            "type": "docker-compose",
+            "dockerCompose": {
+                "up": {
+                    "detached": true,
+                    "build": true
+                },
+                "files": [
+                    "${workspaceFolder}/docker-compose.debug.yml"
+                ]
+            }
+        },
+        {
+            "label": "Compose Down",
+            "type": "docker-compose",
+            "dockerCompose": {
+                "down": {
+                    "removeVolumes": false
+                },
+                "files": [
+                    "${workspaceFolder}/docker-compose.debug.yml"
+                ]
+            }
         }
     ]
 }
